# amazin_aws_cli

./: .travis.yml  Cargo.toml  README.md  startup.sh
src/: .lib.rs.swp  .travis.yml  \  lib.rs  path
src/create_cred_config/: .mod.rs.swp  mod.rs
src/read_csv/: mod.rs
src/rusoto_aws_integration/: .get_region.rs.swp  .mod.rs.swp  get_region.rs  mod.rs
src/write_config/: mod.rs
