[package]
name = "aws_cli_challenge"
version = "0.1.0"
authors = ["Nicholas Njihia <njihianicklas55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
colored="1.9.3"

csv="1.1"

#rusoto aws services
rusoto_core = "0.44.0"
rusoto_s3 = "0.44.0"
rusoto_rds = "0.44.0"
rusoto_ecs = "0.44.0"
rusoto_ec2 = "0.44.0"
rusoto_ecr = "0.44.0"
rusoto_iam = "0.44.0"
